# aleo-acceleration-service

./: .gitignore  .gitmodules  Cargo.toml  README.md  opendir.js  package.json  svelte.config.js  tailwind.config.js  test.http
.github/workflows/: npm_publish_test.yaml  publish_client.yaml
client/: package.json
client/demo/: index.html  package.json  vite.config.js
client/demo/src/: App.tsx  main.ts
client/src/: index.ts  types.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/auto_start/: mod.rs
src-tauri/src/config/: consts.rs  mod.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/os/: mod.rs
src-tauri/src/rpc/: aes.rs  middleware.rs  mod.rs  rpc.rs
src-tauri/src/service/: app.rs
src-tauri/src/tls/: aes.rs  mod.rs
src/lib/: Log.svelte
src/lib/Navbar/: Navbar.css  Navbar.svelte  icon.d.ts
src/lib/commands/: app.ts  config.ts  os.ts  password.ts
src/lib/homepage/: Log.svelte  about.svelte  ask_pass_dialog.svelte  set_pass_dialog.svelte  set_proxy_dialog.svelte  setting.svelte
src/routes/: +layout.svelte  +page.svelte  style.css
src/routes/about/: +page.svelte
