[package]
name = "aleo-acc-service"
version = "0.0.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.1", features = ["system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tokio = { version = "1.32.0", features = ["macros"] }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
log = { version = "0.4.20", features = ["std"] }
anyhow = "1.0.75"
aleowrap = { git = "https://github.com/Aleo123Dev/aleowrap.git" }
lazy_static = "1.4.0"
chrono = "0.4.31"
auto-launch = "0.5.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
capture-stdio = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
