[package]
name = "aleo-acc-service"
version = "0.0.8"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.1", features = [
    "os-all",
    "window-unminimize",
    "window-unmaximize",
    "window-maximize",
    "window-close",
    "window-start-dragging",
    "dialog-save",
    "window-show",
    "window-hide",
    "dialog-open",
    "clipboard-write-text",
    "window-minimize",
    "macos-private-api",
    "system-tray",
    "shell-open",
] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["macros"] }
jsonrpc-core = { version = "18.0.0", features = ["arbitrary_precision"] }
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
log = { version = "0.4.20", features = ["std"] }
anyhow = "1.0.75"
aleowrap = { path = "../aleowrap" }
lazy_static = "1.4.0"
chrono = "0.4.31"
auto-launch = "0.5.0"
hyper = { version = "0.14.27", features = ["full"] }
aes-gcm = "0.10.3"
hex = "0.4.3"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand_core = "0.6.4"
hkdf = "0.12.3"
sha2 = "0.10.8"
rocksdb = "0.21.0"
os_info = { version = "3.7.0", features = ["serde"] }
window-shadows = "0.2.2"
window-vibrancy = "0.4.2"
clipboard-ext = "0.2.0"
secure-string = "0.3.0"

[dev-dependencies]


[target.'cfg(not(target_os = "windows"))'.dependencies]
capture-stdio = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
